@@ -142,4 +142,7 @@ No match: POSIX code 17: match failed
 /abc/\
 Failed: POSIX code 9: bad escape sequence at offset 4     
 
+"(?(?C)"
+Failed: POSIX code 3: pattern error at offset 2     
+
 # End of testdata/testinput16  
